@@ -1,3 +1,8 @@
+2007-01-19  Per Bothner  <per@bothner.com>
+
+	* XQResolveNames.java (walkStatements, resolveModule): Remove
+	pointless no-longer-erv-true isNamespaceDecl invocations.
+
 2007-01-17  Per Bothner  <per@bothner.com>
 
 	* XQParser.java (parseTypeSwitch): Fix parsing of default case
